--- a/lib/src/components/menu/menu-item.css
+++ b/lib/src/components/menu/menu-item.css
@@ -34,22 +34,22 @@
 }
 
 :host([size="sm"]) {
-  --core-list-item-height: var(--core-size-sm);
+  --core-list-item-height: var(--core-element-height-sm);
   --core-list-item-padding: 0 var(--core-space-md);
 }
 
 :host([size="md"]) {
-  --core-list-item-height: var(--core-size-md);
+  --core-list-item-height: var(--core-element-height-md);
   --core-list-item-padding: 0 var(--core-space-md);
 }
 
 :host([size="lg"]) {
-  --core-list-item-height: var(--core-size-lg);
+  --core-list-item-height: var(--core-element-height-lg);
   --core-list-item-padding: 0 var(--core-space-lg);
 }
 
 :host([size="xl"]) {
-  --core-list-item-height: var(--core-size-xl);
+  --core-list-item-height: var(--core-element-height-xl);
   --core-list-item-padding: 0 var(--core-space-lg);
 }
 
