--- a/lib/src/components/select/option.css
+++ b/lib/src/components/select/option.css
@@ -3,10 +3,9 @@
   --core-option-bg-color: var(--core-color-white);
   --core-option-border-radius: 0;
   --core-option-active-color: var(--core-color-ui-weak);
-  --core-option-selected-color: var(--core-color-focus);
-  --core-option-selected-active-color: var(--core-color-focus-strong);
+  --core-option-selected-color: var(--core-color-primary);
   --core-option-font-color: var(--core-color-font);
-  --core-option-min-height: var(--core-size-md);
+  --core-option-min-height: var(--core-element-height-md);
 }
 
 :host {
