--- a/lib/src/components/checkbox/checkbox.css
+++ b/lib/src/components/checkbox/checkbox.css
@@ -1,21 +1,25 @@
 :host {
-  --core-checkbox-bg-color: var(--core-color-white);
-  --core-checkbox-border-color: var(--core-color-ui);
-  --core-checkbox-border: var(--core-border-width-default) solid
-    var(--core-checkbox-border-color);
-  --core-checkbox-cursor: pointer;
-  --core-checkbox-box-shadow: none;
-  --core-checkbox-height: var(--core-element-height-default);
-  --core-checkbox-border-radius: var(--core-border-radius-default);
-  --core-checkbox-indicator-color: transparent;
-  --core-checkbox-label-color: currentColor;
+  --height: var(--core-element-height-default);
+  --box-background: var(--core-color-white);
+  --box-border-width: var(--core-border-width-default);
+  --box-border-color: var(--core-color-ui);
+  --box-border-style: solid;
+  --box-cursor: pointer;
+  --box-box-shadow: none;
+  --box-size: calc(var(--height) - var(--core-space-md));
+  --box-border-radius: var(--core-border-radius-default);
+  --indicator-color: transparent;
+  --indicator-font-size: var(--core-font-size-md);
+  --label-font-size: var(--core-font-size-md);
+  --label-color: currentColor;
+  --label-display: inline-block;
 }
 
 :host {
   display: inline-flex;
   align-items: center;
   margin-right: var(--core-space-sm);
-  min-height: var(--core-checkbox-height);
+  min-height: var(--height);
   cursor: pointer;
 }
 
@@ -25,49 +29,60 @@
   margin-right: 0;
 }
 
-:host([size="sm"]) {
-  --core-checkbox-indicator-font-size: 0.8em;
-  --core-checkbox-height: var(--core-element-height-sm);
+:host(:focus) {
+  outline: 0;
 }
 
-:host([size="md"]) {
-  --core-checkbox-indicator-font-size: 1em;
-  --core-checkbox-height: var(--core-element-height-md);
-}
-
-:host([size="lg"]) {
-  --core-checkbox-indicator-font-size: 1.4em;
-  --core-checkbox-height: var(--core-element-height-lg);
+:host(:hover) {
+  --box-background: var(--core-color-ui-weak);
 }
 
 :host([disabled]) {
   opacity: 0.5;
-  --core-checkbox-bg-color: var(--core-color-ui);
-  --core-checkbox-indicator-color: var(--core-color-ui);
+  --box-background: var(--core-color-ui);
+  --box-indicator-color: var(--core-color-ui);
 }
 
-:host [part="label"] {
-  font-size: var(--hw-font-size-small);
-  display: inline-block;
+:host([checked]) {
+  --box-background: var(--core-color-primary);
+  --box-border-color: var(--core-color-primary);
+  --indicator-color: var(--core-color-primary-contrast);
+}
+
+:host([size="sm"]) {
+  --indicator-font-size: var(--core-font-size-sm);
+  --label-font-size: var(--core-font-size-sm);
+  --height: var(--core-element-height-sm);
+}
+
+:host([size="md"]) {
+  --indicator-font-size: var(--core-font-size-md);
+  --label-font-size: var(--core-font-size-md);
+  --height: var(--core-element-height-md);
+}
+
+:host([size="lg"]) {
+  --indicator-font-size: var(--core-font-size-lg);
+  --label-font-size: var(--core-font-size-lg);
+  --height: var(--core-element-height-lg);
+}
+
+[part="label"] {
+  font-size: var(--label-font-size);
+  display: var(--label-display);
   flex: 1;
   color: var(--core-checkbox-label-color);
   margin-left: var(--core-space-sm);
 }
 
-input {
-  position: absolute;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  vertical-align: middle;
-}
-
 [part="box"] {
-  background: var(--core-checkbox-bg-color);
-  border: var(--core-checkbox-border);
-  border-color: var(--core-checkbox-border-color);
-  width: calc(var(--core-checkbox-height) - var(--core-space-md));
-  height: calc(var(--core-checkbox-height) - var(--core-space-md));
-  border-radius: var(--core-checkbox-border-radius);
+  width: var(--box-size);
+  height: var(--box-size);
+  background: var(--box-background);
+  border-width: var(--box-border-width);
+  border-color: var(--box-border-color);
+  border-style: var(--box-border-style);
+  border-radius: var(--box-border-radius);
   position: relative;
   vertical-align: middle;
   display: inline-flex;
@@ -75,27 +90,13 @@ input {
   justify-content: center;
 }
 
-:host(:focus-within) [part="box"] {
+:host(:focus) [part="box"] {
   box-shadow: var(--core-focus-outline);
-  outline: 0;
-}
-
-:host(:hover) [part="box"] {
-  --core-checkbox-bg-color: var(--core-color-ui-weak);
-}
-
-:host([checked]) [part="box"] {
-  --core-checkbox-bg-color: var(--core-color-primary);
-  --core-checkbox-border-color: var(--core-color-primary);
 }
 
 [part="indicator"] {
-  font-size: var(--core-checkbox-indicator-font-size);
-  color: var(--core-checkbox-indicator-color);
+  font-size: var(--indicator-font-size);
+  color: var(--indicator-color);
   fill: currentColor;
   display: block;
-}
-
-:host([checked]) [part="indicator"] {
-  --core-checkbox-indicator-color: var(--core-color-primary-contrast);
 }
