--- a/lib/src/components/radio/radio.css
+++ b/lib/src/components/radio/radio.css
@@ -1,19 +1,31 @@
 :host {
-  --core-radio-box-shadow: none;
-  --core-radio-height: var(--core-element-height-default);
-  --core-radio-box-bg-color: var(--core-color-white);
-  --core-radio-box-border: var(--core-border-width-default) solid
-    var(--core-color-ui);
+  --box-shadow: none;
+  --cursor: pointer;
+  --height: var(--core-element-height-default);
+  --box-border-color: var(--core-color-ui);
+  --box-border-width: var(--core-border-width-default);
+  --box-border-style: solid;
+  --box-background: var(--core-color-white);
+  --box-border-radius: 50%;
+  --box-size: calc(var(--height) - var(--core-space-md));
+  --indicator-color: transparent;
+  --indicator-size: 60%;
+  --indicator-border-radius: var(--box-border-radius);
+  --label-font-size: var(--core-font-size-md);
 }
 
 :host {
   vertical-align: middle;
   outline: 0;
-  min-height: var(--core-radio-height);
+  min-height: var(--height);
   cursor: pointer;
   display: inline-flex;
   align-items: center;
   margin-right: var(--core-space-sm);
+}
+
+:host(:focus) {
+  outline: 0;
 }
 
 :host([full]) {
@@ -24,22 +36,36 @@
 
 :host([disabled]) {
   opacity: 0.5;
-  cursor: default;
+  cursor: not-allowed;
 }
 
-:host [part="input-field"] {
-  position: absolute;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  vertical-align: middle;
+:host(:hover:not([disabled]):not([checked])) {
+  --box-background: var(--core-color-ui-weak);
 }
 
-:host [part="label"] {
-  line-height: 1.5;
-  font-size: var(--hw-font-size-small);
-  display: block;
-  flex: 1;
-  margin-left: var(--core-space-sm);
+:host(:focus) [part="box"] {
+  box-shadow: var(--core-focus-outline);
+  outline: 0;
+}
+
+:host([checked]) {
+  --box-border-color: var(--core-color-primary);
+  --indicator-color: var(--core-color-primary);
+}
+
+:host([size="sm"]) {
+  --label-font-size: var(--core-font-size-sm);
+  --height: var(--core-element-height-sm);
+}
+
+:host([size="md"]) {
+  --label-font-size: var(--core-font-size-md);
+  --height: var(--core-element-height-md);
+}
+
+:host([size="lg"]) {
+  --label-font-size: var(--core-font-size-lg);
+  --height: var(--core-element-height-lg);
 }
 
 [part="box"] {
@@ -47,48 +73,33 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  box-shadow: var(--core-radio-box-shadow);
-  border: var(--core-radio-box-border);
-  border-radius: 50%;
-  background: var(--core-radio-box-bg-color);
-  width: calc(var(--core-radio-height) - var(--core-space-md));
-  height: calc(var(--core-radio-height) - var(--core-space-md));
+  background: var(--box-background);
+  width: var(--box-size);
+  height: var(--box-size);
+  box-shadow: var(--box-shadow);
+  border-width: var(--box-border-width);
+  border-color: var(--box-border-color);
+  border-style: var(--box-border-style);
+  border-radius: var(--box-border-radius);
   transition: border-color 0.3s ease, max-height 0.3s ease, transform 0.3s ease;
 }
 
-:host(:focus-within) [part="box"] {
-  box-shadow: var(--core-focus-outline);
-  outline: 0;
-}
-
-:host(:hover:not([disabled]):not([checked])) [part="box"] {
-  --core-radio-box-bg-color: var(--core-color-ui-weak);
-}
-
-:host([checked]) [part="box"] {
-  border-color: var(--core-color-primary);
+[part="label"] {
+  line-height: 1.5;
+  font-size: var(--label-font-size);
+  display: block;
+  flex: 1;
+  margin-left: var(--core-space-sm);
 }
 
 [part="indicator"] {
-  color: var(--core-color-primary);
+  color: var(--indicator-color);
   fill: currentColor;
 }
 
-:host([checked]) [part="indicator"] i {
-  border-radius: 50%;
-  width: 60%;
-  height: 60%;
-  background: var(--core-color-primary);
-}
-
-:host([size="sm"]) {
-  --core-radio-height: var(--core-element-height-sm);
-}
-
-:host([size="md"]) {
-  --core-radio-height: var(--core-element-height-md);
-}
-
-:host([size="lg"]) {
-  --core-radio-height: var(--core-element-height-lg);
+:host [part="indicator"] span {
+  border-radius: var(--indicator-border-radius);
+  width: var(--indicator-size);
+  height: var(--indicator-size);
+  background: var(--indicator-color);
 }
