--- a/lib/src/components/range/range.css
+++ b/lib/src/components/range/range.css
@@ -35,13 +35,12 @@
 [part="track"] {
   background: var(--core-color-primary);
   position: absolute;
-  transition: all 0.2s ease;
   height: 5px;
 }
 
 [part="thumb"] {
   outline: 0;
-  border: 2px solid var(--core-color-ui);
+  border: 0;
   position: absolute;
   z-index: 1;
   cursor: grab;
@@ -54,8 +53,8 @@
   top: 50%;
   transform: translateY(-50%)
     translateX(calc(var(--core-element-height-xs) / 2 * -1));
-  transition: all 0.2s ease;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--core-color-white);
+  border: var(--core-border-width-default) solid var(--core-color-ui);
 }
 
 [part="thumb"]:focus {
