add editable range

--- a/lib/src/components/range/range.css
+++ b/lib/src/components/range/range.css
@@ -21,6 +21,10 @@
   padding: 0 calc(var(--core-element-height-xs) / 2);
 }
 
+:host([editable]) [part="line"] {
+  cursor: copy;
+}
+
 [part="line"] {
   user-drag: none;
   position: relative;
